# workshops

./: .gitignore  README.md
1-Lakekeeper-Intro/: .gitignore  README.md
1-Postgres-Page-Heap-Concepts/: README.md  docker-compose.yml
2-Airflow-Concurrency-Control-SQL/: README.md  compose-airflow3.yml
3-Postgres-Data-Archiving-With-FDW/: Archive-Old-Partitions-With-FDW.md  Readme.md  docker-compose-3nodes-FDW.yml
4-MV-Considerations/: clickhouse_setup.sql  compose-redpanda-pg-clickhouse.yml  kafka_producer.py  mv-test.md  requirements.txt  verification_script.py
5-RisingWave-Workshop/: ReadMe.md  RisingWave Dashboard Complete Guide.md  RisingWave-Section1-Basics.md  RisingWave-Section2-StreamStreamJoins.md  RisingWave-Section3-Advanced-Monitoring-Performance.md  compose.yml  kafka_producer_advanced.py  prometheus.yaml  risingwave.toml
6-ADBC-Performance-Comparison/: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
7-Temporal/: .gitignore  README.md  Workshop-Advanced.md  Workshop-Basics.md  pyproject.toml
7-Temporal/Stock-Exchange-Temporal-App/: activities.py  run_backfill.py  run_parent_backfill.py  run_schedule.py  run_standalone_activity.py  run_worker.py  run_workflow.py  shared.py  stock_exchange_architecture.excalidraw.json  workflows.py
8-MinIO-vs-LibreFS-vs-RustFS/: README.md  benchmark.py  benchmark_duckdb.py  docx-appendix-methodology.md  generate-data.py  generate_data_parquet.py  pyproject.toml
8-MinIO-vs-LibreFS-vs-RustFS/docker/: docker-compose-minio.yml
8-SeaweedFS-vs-RustFS/: .gitignore  Dockerfile.librefs  (+21 more)
(+26 files in other folders)
