[project]
name = "temporal-workshop"
version = "0.1.0"
description = "Self-learning Temporal Python workshop - basic + advanced"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "temporalio>=1.27.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
    "jdatetime>=5.0.0",
]

[[tool.uv.index]]
url = "https://mirror2.chabokan.net/pypi/simple"
default = true
