[project]
name = "8-seaweedfs-vs-rustfs"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.43.31",
    "duckdb>=1.5.3",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "psutil>=6.0.0",
    "pytz>=2026.2",
    "pyiceberg[sql-sqlite]>=0.9.1",
    "daft>=0.4.8",
    "pandas>=2.0.0",
]
